--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">login_register_test1</string>
+    <string name="setting_name">Settings</string>
 </resources>
