--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="setting_name">Settings</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="pl">
+        <item>Account1</item>
+        <item>Account2</item>
+        <item>Account3</item>
+    </string-array>
 </resources>
